# redpanda

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .clang-tidy-strict  .clang-tidy-strict-tests  .clang_complete  .clangd  .dir-locals.el  .dockerignore  .gcloudignore  .git-blame-ignore-revs  .gitignore  .gitorderfile  .golangci.yml  .pre-commit-config.yaml  .style.yapf  .vtools-sha  .vtools.yaml  .vtools.yml  .yamllint  .yapfignore  3rdparty.cmake.in  BUILD  CMakeLists.txt  CMakePresets.json  CNAME  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CPPLINT.cfg  Dockerfile  Dockerfile.dockerignore  LICENSES.md  MODULE.bazel  Makefile  PROJECT  PendingReleaseNotes.md  README.md  README_CN.md  (+31 more)
src/: CMakeLists.txt  meson.build
src/bamboo/: README.md  requirements.txt  setup.py
src/bamboo/src/: __init__.py  main.py  session.py
src/consistency-testing/chaostest/: README.md  example.kafka.comrmw.json  example.kafka.mrsw.json  example.kvelldb.comrmw.json  example.kvelldb.json  example.kvelldb.mrsw.json  example.redpanda.comrmw.json  example.redpanda.json  example.redpanda.mrsw.json  example.settings.json  test-kafka.py  test-kvelldb.py  test-redpanda.py
src/consistency-testing/gobekli/: README.md  setup.py
src/consistency-testing/iofaults/: iofaults.py  requirements.txt
src/consistency-testing/kafka-availability/: availability_logger.py  overview.gp
src/go/: .dockerignore  .goreleaser.yaml  .goreleaser_rp_connect.yaml  .rp_connect_ref  go.mod  go.sum
src/go/cluster-to-redpanda-migration/: .goreleaser.yaml  Dockerfile  Makefile  cluster-to-redpanda-migration.sh  go.mod  go.sum  main.go
src/go/e2e_tests/: kafka_api_test.go
src/go/k8s/: .golangci.yml  .pre-commit-config.yaml  .tool-versions  Dockerfile  Dockerfile.dockerignore  Dockerfile.in  Makefile  PROJECT  README.md  go.mod  go.sum  kind.yaml  kuttl-helm-test.yaml  kuttl-produce-consume.yaml  kuttl-test.yaml  kuttl-unstable-test.yaml  kuttl-v2-ci-test.yaml  kuttl-v2-helm-test.yaml  kuttl-v2-test.yaml  main.go  redpanda.yaml
src/go/kreq-gen/: BUILD  CMakeLists.txt  build.sh  go.mod  go.sum  kafka-request-generator.go  meson.build
src/go/metrics/: .gcloudignore  app.yaml  go.mod  go.sum
src/go/migration-cli/: Dockerfile  Makefile  go.mod  go.sum  main.go  migration-cli.sh
src/go/pkg/: go.mod  go.sum
src/go/rpk/: .golangci.yml  .goreleaser.yaml  Makefile  buf.gen.yaml  buf.yaml  build.sh  gen_deps.sh  generate.sh  go.mod  go.sum  gon.json  gon_arm64.json
src/go/transform-sdk/: LICENSE  abi.go  example_transcoding_test.go  guest_callbacks.go  processor.go  sdk.go  serialize.go  serialize_test.go  stub_abi.go
src/idl/: coproc_idl.json  process_batch_coproc.json
src/java/: .project
src/java/compacted-log-verifier/: pom.xml
src/java/kafka-verifier/: pom.xml
src/js/: .eslintignore  .eslintrc  .nycrc  .prettierignore  build-package.json  build.sh  compact-public.js  generate-entries.sh  package-lock.json  package.json  publish-wasm-dependecy.js  tsconfig.json  webpack.js
src/js/publish_artifacts/: README.md  package.json
src/js/test/: testUtilities.ts
src/rp/: CMakeLists.txt
src/rp/adt/: CMakeLists.txt  bloom_filter_test.cc  ema.h  roaring_bloom_filter.h  tagged_ptr.h  tagged_ptr_tests.cc  variant_overload.h
src/rp/bmtl/: CMakeLists.txt  bmtl.fbs  bmtl_cfg.h  bmtl_service.cc  bmtl_service.h  main.cc  sample-cfg.yml
src/rp/caspaxos/: CMakeLists.txt  caspaxos.fbs  caspaxos.h
src/rp/chain_replication/: CMakeLists.txt  chain_replication.fbs  chain_replication_service.cc  chain_replication_service.h  smf_specializations.cc  smf_specializations.h
src/rp/filesystem/: CMakeLists.txt  directory_walker.h  file_size_utils.h  page_cache.cc  page_cache.generated.h  page_cache.h  page_cache_buffer_manager.h  page_cache_file_idx.cc  page_cache_file_idx.h  page_cache_request.h  page_cache_result.h  page_cache_stats.h  timestamp.fbs  wal.fbs  wal_cold_boot.cc  wal_cold_boot.h  wal_compaction_manager.h  wal_core_mapping.cc  wal_core_mapping.h  wal_disk_pager.cc  wal_disk_pager.h  wal_name_extractor_utils.cc  wal_name_extractor_utils.h  wal_nstpidx.cc  wal_nstpidx.h  wal_nstpidx_manager.cc  wal_nstpidx_manager.h  wal_nstpidx_repair.cc  wal_nstpidx_repair.h  wal_opts.cc  wal_opts.h  wal_pretty_print_utils.cc  wal_pretty_print_utils.h  wal_reader_node.cc  wal_reader_node.h  wal_requests.cc  wal_requests.h  wal_segment.cc  wal_segment.h  wal_segment_indexer.cc  (+11 more)
src/rp/hashing/: CMakeLists.txt  fnv.h  jenkins.h  jump_consistent_hash.h  murmur.cc  murmur.h  twang.h  xx.h  xx_tests.cc
src/rp/hbadger/: CMakeLists.txt  hbadger.cc  hbadger.h
src/rp/ioutil/: CMakeLists.txt  dir_utils.cc  dir_utils.h  priority_manager.cc  priority_manager.h  readfile.h
src/rp/prometheus/: prometheus_sanitize.h
src/rp/raft/: raft.fbs  raft_nstpidx_stats.h  raft_service.cc  raft_service.h
src/rp/random/: CMakeLists.txt  fast_prng.h  random_test.cc
src/rp/syschecks/: syschecks.h
src/rp/test_utils/: non_root_port.h
src/transform-sdk/: README.md
src/transform-sdk/cpp/: .clang-tidy  .gitignore  BUILD  CMakeLists.txt  README.md
src/transform-sdk/go/: doc.go  example_mirror_test.go  example_regexp_filter_test.go  example_transcoding_test.go  go.mod  processor.go  sdk.go  serialize.go  serialize_test.go
src/transform-sdk/js/: .clang-tidy  .gitignore  BUILD  CMakeLists.txt  CMakePresets.json  README.md  generate_js_provider.py  identity_logging.js  js_vm.cc  js_vm.h  js_vm_test.cc  main.cc  package_toolchain.py
src/transform-sdk/rust/: Cargo.toml  README.md
src/transform-sdk/tests/: BUILD  admin_client.go  go.mod  go.sum  integration_test.go  test_util.go
src/v/: CMakeLists.txt  README.md  coding-style.md  git-version.py  likely.h  meson.build  oncore.h  outcome.h  outcome_future_utils.h  outcome_tests.cc  seastarx.h  socheck.h  static_deleter_fn.h  tristate.h  units.h  vassert.cc  vassert.h  vassert_as_exception.cc  version.cc.in  version.h.in  vformat.h  vlog.h  vlog_error.h
src/v/.vim/: coc-settings.json
src/v/admin/: CMakeLists.txt  (+2 more)
tools/rp_storage_tool/: Cargo.toml  Dockerfile  README.md
(+9482 files in other folders)
